--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     restart: unless-stopped
     ports:
       - 8081:5173
-    image: template_frontend:development
-    container_name: template_frontend_dev
+    image: lenoread_frontend:development
+    container_name: lenoread_frontend_dev
     volumes:
       - ./frontend:/app
     environment:
@@ -36,8 +36,8 @@ services:
       - db
     networks:
       - default
-    image: template_backend:development
-    container_name: template_backend_dev
+    image: lenoread_backend:development
+    container_name: lenoread_backend_dev
   worker:
     build:
       context: ./backend
@@ -55,17 +55,17 @@ services:
       - backend
     networks:
       - default
-    image: template_worker:development
-    container_name: template_worker_dev
+    image: lenoread_worker:development
+    container_name: lenoread_worker_dev
   db:
-    image: postgres:15
+    image: postgres:18-trixie
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/
     env_file:
       - ./.env.dev.db
     networks:
       - default
-    container_name: template_db_dev
+    container_name: lenoread_db_dev
     environment:
       - TZ=UTC
 
