chore: setup test/workspace environment

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,3 +15,7 @@ django-import-export==4.3.14
 arrow==1.4.0
 pytz==2025.2
 ms-active-directory==1.14.1
+pytest==9.0.2
+pytest-django==4.11.1
+django-model-utils==5.0.0
+pytest-mock==3.15.1
