--- a/.github/workflows/version-release.yml
+++ b/.github/workflows/version-release.yml
@@ -42,6 +42,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
+      - name: Re-checkout repo after release
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Upload version artifact
         uses: actions/upload-artifact@v4
         with:
@@ -56,6 +61,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Download version artifact
         uses: actions/download-artifact@v4
@@ -63,12 +70,10 @@ jobs:
           name: version
           path: ./backend
 
-      - name: Extract version from backend/VERSION
-        id: version
+      - name: Get version from git tag
         run: |
-          VERSION=$(cat backend/VERSION)
+          VERSION=$(git describe --tags --abbrev=0)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "Extracted version: $VERSION"
 
       - name: Extract major/minor versions
         id: version_parts
@@ -223,6 +228,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Download version artifact
         uses: actions/download-artifact@v4
@@ -230,12 +237,10 @@ jobs:
           name: version
           path: ./backend
 
-      - name: Extract version from backend/VERSION
-        id: version
+      - name: Get version from git tag
         run: |
-          VERSION=$(cat backend/VERSION)
+          VERSION=$(git describe --tags --abbrev=0)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
-          echo "Extracted version: $VERSION"
 
       - name: Extract major/minor versions
         id: version_parts
