fix: new github actions to fix ci/cd workflow issues

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -21,7 +21,7 @@ RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Install MkDocs
-RUN pip install mkdocs 'mkdocstrings[python]' mkdocs-material
+RUN pip install mkdocs 'mkdocstrings[python]' mkdocs-material mike
 
 # Copy entrypoint script
 COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
