fix: missing site_url

--- a/backend/mkdocs.yml
+++ b/backend/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: LenoreAD
 site_description: An advanced admin dashboard for AD
 site_author: John Adams
+site_url: https://novanglus96.github.io/LenoreAD/
 copyright: 2026 John Adams
 nav:
   - Home: index.md
@@ -47,4 +48,3 @@ extra:
   version:
     provider: mike
     default: latest
-    enable: true
