--- a/backend/mkdocs.yml
+++ b/backend/mkdocs.yml
@@ -23,6 +23,7 @@ theme:
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
+  custom_dir: docs/overrides
 plugins:
   - search
   - mkdocstrings:
@@ -48,3 +49,5 @@ extra:
   version:
     provider: mike
     default: latest
+extra_css:
+  - styles/version-banner.css
